# esp32-arduino-prototyping-kit

./: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  library.json  platformio.ini  readme.md
include/: AbstractChannel.h  AbstractChannelDI.h  ActualChannel.h  ActualServiceProvider.h  ArduinoButton.h  CertificationManager.h  ChannelDI.h  CommandParser.h  FileServer.h  Log.h  MSTick.cpp  MSTick.h  NetworkManager.h  SPIFFSService.h  ServiceProvider.h  WebSocketServer.h
src/: ArduinoButton.cpp  CertificationManager.cpp  CommandParser.cpp  FileServer.cpp  Log.cpp  MSTick.cpp  NetworkManager.cpp  SPIFFSService.cpp  WebSocketServer.cpp  main.cpp
test/: CMakeLists.txt  StdLog.cpp  testMain.cpp
test/include/: StdLog.h
